infra/nginx-cd/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    field.cattle.io/publicEndpoints: '[{"addresses":["10.0.0.62"],"port":80,"protocol":"HTTP","serviceName":"default:nginx","ingressName":"default:nginx","hostname":"ngn.lly.li","path":"/","allNodes":false}]'
  creationTimestamp: "2022-10-03T21:16:55Z"
  generation: 4
  labels:
    mine: "yes"
    workload.user.cattle.io/workloadselector: apps.deployment-default-nginx
  name: nginx
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-default-nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-default-nginx
    spec:
      affinity: {}
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
  uid: 38503f26-c7e5-494c-bf07-53e05132c73b
spec:
  clusterIP: 10.43.168.42
  clusterIPs:
  - 10.43.168.42
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-default-nginx
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["10.0.0.62"],"port":80,"protocol":"HTTP","serviceName":"default:nginx","ingressName":"default:nginx","hostname":"ngn.lly.li","path":"/","allNodes":false}]'
  generation: 1
  name: nginx
  namespace: default
spec:
  rules:
  - host: ngn.lly.li
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
